Move to the dev Panama API
For now SegmentScope -> Arena. This is obviously simpler to use, but
some Arenas cannot be closed.
Will refresh the jextract sources soon (a manual quick hack should be
enough for now).